crea carpeta download y es ignorada

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Ignorar el entorno virtual
 env/
 
+# Ignorar la carpeta de descargas temporales
+downloads/
+
 # Ignorar archivos de medios generados
 *.mp4
 *.mkv
