--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ colorama==0.4.6
 distro==1.9.0
 Flask==3.0.3
 Flask-SocketIO==5.3.7
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.2
@@ -20,6 +21,7 @@ jiter==0.5.0
 MarkupSafe==2.1.5
 mutagen==1.47.0
 openai==1.43.1
+packaging==24.1
 pycryptodomex==3.20.0
 pydantic==2.9.0
 pydantic_core==2.23.2
