--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ tqdm==4.66.5
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
+waitress==3.0.0
 websockets==13.0.1
 Werkzeug==3.0.4
 wsproto==1.2.0
